@@ -10,13 +10,15 @@ var Connection = exports.Connection = function(id, socketOptions) {
   // Set up event emitter
   EventEmitter.call(this);
   // Store all socket options
-  this.socketOptions = socketOptions ? socketOptions : {host:'localhost', port:27017};
+  this.socketOptions = socketOptions ? socketOptions : {host:'localhost', port:27017, domainSocket:false};
   // Set keep alive default if not overriden
   if(!this.socketOptions.keepAlive) this.socketOptions.keepAlive = 100;
   // Id for the connection
   this.id = id;
   // State of the connection
   this.connected = false;
+  // Set if this is a domain socket
+  this.domainSocket = this.socketOptions.domainSocket;
 
   //
   // Connection parsing state
@@ -84,7 +86,12 @@ Connection.prototype.start = function() {
     this.connection.connect(this.socketOptions.port, this.socketOptions.host);
   } else {
     // Create new connection instance
-    this.connection = net.createConnection(this.socketOptions.port, this.socketOptions.host);
+    if(!this.domainSocket) {
+      this.connection = net.createConnection(this.socketOptions.port, this.socketOptions.host);      
+    } else {
+      this.connection = net.createConnection(this.socketOptions.host);            
+    }
+
     // Set options on the socket
     this.connection.setTimeout(this.socketOptions.connectTimeoutMS != null ? this.socketOptions.connectTimeoutMS : this.socketOptions.timeout);
     // Work around for 0.4.X
