@@ -15,10 +15,14 @@ var ConnectionPool = exports.ConnectionPool = function(host, port, poolSize, bso
   this.socketOptions = typeof socketOptions === 'object' ? socketOptions : {};
   this.socketOptions.host = host;
   this.socketOptions.port = port;
+  this.socketOptions.domainSocket = false;
   this.bson = bson;
   // PoolSize is always + 1 for special reserved "measurment" socket (like ping, stats etc)
   this.poolSize = poolSize;
   this.minPoolSize = Math.floor(this.poolSize / 2) + 1;
+
+  // Check if the host is a socket
+  if(host.match(/^\//)) this.socketOptions.domainSocket = true;
 
   // Set default settings for the socket options
   utils.setIntegerParameter(this.socketOptions, 'timeout', 0);
