@@ -29,6 +29,11 @@ function Server(host, port, options) {
   EventEmitter.call(this);
   // Set up Server instance
   if(!(this instanceof Server)) return new Server(host, port, options);
+  // Ensure correct values
+  if(port != null && typeof port == 'object') {
+    options = port;
+    port = Connection.DEFAULT_PORT;
+  }
 
   var self = this;
   this.host = host;
